Updated the project such that it will execute like the "Real" version (if you've worked on this project, you know what I'm referring to).